use zip distribution