@@ -4,15 +4,16 @@ FROM pluribuslabs/centos7-oracle-jdk-7
 
 MAINTAINER Pluribus Labs Docker Dev <docker-dev@pluribuslabs.com>
 
-RUN yum -y install wget
-ENV YOUTRACK_PACKAGE youtrack-6.5.16853.jar
+RUN yum -y install wget hostname
+ENV YOUTRACK_PACKAGE youtrack-6.5.16853.zip
 ENV YOUTRACK_DOWNLOAD http://download-cf.jetbrains.com/charisma
-ENV YOUTRACK_PORT 8112
+ENV YOUTRACK_PORT 8080
 
 RUN wget -nv $YOUTRACK_DOWNLOAD/$YOUTRACK_PACKAGE
-
+RUN unzip $YOUTRACK_PACKAGE -d /opt/youtrack &&\
+   rm $YOUTRACK_PACKAGE
 EXPOSE $YOUTRACK_PORT
 
 # Looks like ENV variables don't get subbed in the CMD command hence the hardcode
 # from https://confluence.jetbrains.com/display/YTD6/YouTrack+JAR+as+a+Service+on+Linux
-CMD java -Xmx1g -XX:MaxPermSize=250M -Djava.awt.headless=true -jar youtrack-6.5.16853.jar 8112
+CMD ["/opt/youtrack/bin/youtrack.sh", "run"]
